# Logan-IA

./: .env.example  .gitignore  DEPLOY_INSTRUCTIONS.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  main.py
config/: logan.yml  logging.yml  priorities.yml  thresholds.yml  voices.yml
core/: __init__.py  base_driver.py  base_service.py  base_worker.py  config_manager.py  constants.py  enums.py  event_bus.py  exceptions.py  health_manager.py  logger.py  scheduler.py  supervisor.py  voice_queue.py
core/models/: __init__.py  alert.py  event.py  obd_data.py  vehicle_state.py  voice_message.py
data/migrations/: 001_initial.sql
data/phrases/: connection.json  fuel.json  general.json  temperature.json
docker/api/: Dockerfile
docker/kokoro/: Dockerfile  kokoro_server.py
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docker/supervisor/: Dockerfile
docker/whisper/: Dockerfile  whisper_server.py
docs/: phase3_ai_integration.md
drivers/: __init__.py  audio_driver.py  esp32_driver.py  obd_driver.py
scripts/: seed_dtc_db.py  simulate_obd.py
services/: __init__.py  command_processor.py  phrase_selector.py
tests/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/mocks/: __init__.py  mock_esp32.py  mock_obd.py
workers/: __init__.py  battery_worker.py  connection_worker.py  dtc_worker.py  fuel_worker.py  internet_sync_worker.py  lambda_worker.py  led_worker.py  recovery_worker.py  rpm_worker.py  temperature_worker.py  user_speech_worker.py  voice_worker.py  wake_word_worker.py
(+1 files in other folders)
